--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: wQJhEL0Hcdvb8pKzVlrBPA
-# Updated: 26 Aug 2010
+# Checksum: oBzzEhIxGJSYmNwXD5CPGw
+# Updated: 27 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3357,6 +3357,7 @@ http://creatives.livejasmin.com/iframes/
 http://cts.tradepub.com/
 http://d.ads.readwriteweb.com/
 http://d.unanimis.co.uk/
+http://dads.new.digg.com/
 http://data.webads.co.nz/
 http://datingtools.spacash.
 http://dcad.watersoul.com/
