--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: oBzzEhIxGJSYmNwXD5CPGw
+# Checksum: PqnZedk2u5DVh5I/5w2HdQ
 # Updated: 27 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3665,6 +3665,7 @@ http://www.farmholidays.is/IFrameAll
 http://www.fileporn.org/aff/
 http://www.fordforums.com.au/banner.swf
 http://www.freehomemades.com/banner
+http://www.frostytech.com/banners/
 http://www.funtonia.com/promo/
 http://www.gov-auctions.org/images/banner/banner
 http://www.greattastenopain.com/aff/
