--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -501,6 +501,7 @@
 .richrelevance.
 .ritecounter.
 .roiservice.com/track/
+.rovicorp.com/
 .rottentomatoes.com/tracking/
 .rsvpgenius.com/
 .ru/stat/?
