--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: PqnZedk2u5DVh5I/5w2HdQ
+# Checksum: y3Rt8wgMFcUTYumUIQuHBw
 # Updated: 27 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3449,6 +3449,7 @@ http://kenny-glenn.net/images/longbanner_
 http://kermit.macnn.com/?DC
 http://kinopokaz.org/
 http://kliklink.ru/get.js?user_id=
+http://l.keewurd.com/
 http://l.yimg.com/a/i/mntl/sho/
 http://l.yimg.com/ao/i/ad/
 http://l.yimg.com/mq/a/
