--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: y3Rt8wgMFcUTYumUIQuHBw
-# Updated: 27 Aug 2010
+# Checksum: ph6WpVgUM0eRsQkgjXHUDQ
+# Updated: 28 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1429,6 +1429,7 @@
 /_odd_images/banners/
 /_special/banners/
 /a.aspx?Zone
+/ads160x600
 /abm.asp?
 /abmw.asp?
 /abmw.aspx
