--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -16,6 +16,7 @@
 .indiadaily.com/editorial/leaderboard.
 .indiadaily.com/leaderboard.
 .mpression.net/
+.mbajunction.com/mba/ads/
 .net-filter.com/
 .net/Ads/
 .netklix.com/
@@ -53,6 +54,7 @@ http://c.waplog.net/
 http://c.wen.ru/
 http://contentxn.com/
 http://countreg.com/
+http://bpoavenues.com/bpo/ads/
 http://statistics.infowap.info/
 http://stats.ozwebsites.biz/
 http://thinakkural.com/web_advers/
