--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ph6WpVgUM0eRsQkgjXHUDQ
+# Checksum: wOSyaI4dqL3XZKK96EJAXQ
 # Updated: 28 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3061,6 +3061,7 @@ http://ad.au.doubleclick.net/ad
 http://ad.be.doubleclick.net/ad/
 http://ad.blog.
 http://ad.bnmla.com/
+http://ad.doubleclick.net/clk
 http://ad.ca.doubleclick.net/ad
 http://ad.de.doubleclick.net/ad/
 http://ad.doubleclick.net/ad/
