--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: wOSyaI4dqL3XZKK96EJAXQ
+# Checksum: kCg8NbKjOyTYIRTNdsKBSA
 # Updated: 28 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2412,6 +2412,7 @@
 /ruby_iframe_
 /rule34/ads/
 /rule34v2/ads/
+/savvyads.
 /ScanScout.
 /ScanScoutPlugin.
 /scripts/ad-
