--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kCg8NbKjOyTYIRTNdsKBSA
+# Checksum: jTagWl5LM0mgzdUiaWArLA
 # Updated: 28 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -827,6 +827,7 @@
 .media-general.
 .media-servers.net
 .media-toolbar.com/
+.merriam-webster.com/creative.
 .mediaforge.com/
 .mediag4.com/
 .mediagridwork.
