--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jTagWl5LM0mgzdUiaWArLA
+# Checksum: NXlCATWLTGDeX4lX/e2IQg
 # Updated: 28 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3178,6 +3178,7 @@ http://ads.netcommunities.com/
 http://ads.ninemsn.com.au/
 http://ads.nzcity.co.nz/
 http://ads.okazii.ro/content/
+http://ads.onvertise.com/
 http://ads.passion.ru/
 http://ads.pleasuregirl.net/
 http://ads.pornhub.com/
