misc tracker cleanups

--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -809,6 +809,7 @@
 /clicktrends/
 /cmslog.dll?
 /cnn/images/1.gif
+/cnn_tracking_
 /cnstats/
 /cnt-combined.php?
 /cnt.aspx?
@@ -1063,7 +1064,6 @@
 /newlog.php?
 /newscount/
 /newSophus/
-/newsshow/cleardot.gif
 /nielsen.js
 /nielsen.track
 /nielsen/v53.js
@@ -1160,7 +1160,6 @@
 /saveStats.php?
 /sclanalytics
 /script/analytics/
-/scripts/affaction.asp?
 /sdctag.js?
 /securetracker.
 /SellathonCounterService.
@@ -1175,7 +1174,6 @@
 /showhits.php?
 /site-tracker.js
 /site-tracker_
-/site/enlightenment.html?
 /site_stats.
 /site_stats/
 /siteafs.txt?
