--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: NXlCATWLTGDeX4lX/e2IQg
+# Checksum: xTpJ2V4JP9Q4lgC6I8d95Q
 # Updated: 28 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3465,6 +3465,7 @@ http://legendarylars.com/promo/
 http://letitbit.net/tmpl/premium_
 http://lifepromo.biz/promo/
 http://links-and-traffic.com/
+http://linkexchangers.net/
 http://links.freeones.com/link
 http://linksave.in/fopen
 http://lisa.belointeractive.
