--- a/easylistfanboy/iron/adblock-cz.ini
+++ b/easylistfanboy/iron/adblock-cz.ini
@@ -21,6 +21,7 @@
 .cz/reklama/
 .cz/rs/get-iframe.php?
 .espoluprace.cz/affiliate/
+.etargetnet.
 .hit.gemius.pl/
 .hry.cz/t/h/ad/
 .idnes.cz/r.asp?
@@ -75,6 +76,7 @@ http://cz.adocean.pl/
 http://data.idnes.cz/soutez/
 http://dot.idot.cz/
 http://emonitor.
+http://img.megadarky.cz/blk/
 http://ihned.cz/img/_flash/
 http://intext.
 http://intext.wdt.cz/vv.js?ver=
