--- a/easylistfanboy/iron/adblock-jpn.ini
+++ b/easylistfanboy/iron/adblock-jpn.ini
@@ -56,6 +56,8 @@
 .jp/ufo/
 .jp/urchin.js
 .jp/Zen?
+.infotop.co.jp/
+.infotop.jp/
 .kau.li/ad.js
 .kazenoashiato.jp/file/index/FILECD/
 .logoole.yahoo.co.jp/
@@ -108,6 +110,7 @@
 /beacon.php?
 /daijoubu/image/ad/
 /freexy_ad_
+/hist_count.
 /images/gban/
 /images/tamakuri
 /img/admanga
