--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -65,6 +65,7 @@
 .hotwords.com.mx/
 .ieurop.net/
 .intrastats.com/
+.impulsonegocios.com/resources/original/banners/
 .italianos.it/2008/Tim/
 .jmonline.com.br/uploads/banners/
 .jogolandia.com.br/banners/
