--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -9,6 +9,7 @@
 .affilired.com/
 .afiliads.com/bloco
 .afilio.com.br/
+.aquiacontece.com.br/_BANNER/
 .belasmensagens.com.br/posthaus
 .bilibio.com.br/fotoBanner/
 .blog.br/action/tools/coMesWin
