--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -71,6 +71,7 @@ _publicidade_
 .impulsonegocios.com/resources/original/banners/
 .italianos.it/2008/Tim/
 .jmonline.com.br/uploads/banners/
+.jmonline.com.br/novo/banner_
 .jogolandia.com.br/banners/
 .keyade.com/
 .laregion.es/imagenes/banners/
