--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -43,6 +43,8 @@ _publicidade_
 .cv/images/pubs/
 .cv/pub/
 .dci.com.br/Banners
+.diariodopara.com.br/add/
+.diariodopara.com.br/ban-
 .diariodopara.com.br/capa.swf
 .diariodopara.com.br/noticiafull_
 .diarioti.com/sisimg/banners/
