--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xTpJ2V4JP9Q4lgC6I8d95Q
-# Updated: 28 Aug 2010
+# Checksum: x6IgjmH+Um5rJk3MLuUiVw
+# Updated: 29 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -328,6 +328,7 @@
 .bbmedia.cz/
 .bbn.by/
 .bcash4you.com/.jpg
+.beaconads.com/
 .begun.ru/
 .belboon.de/
 .bestofferdirect.
@@ -827,7 +828,6 @@
 .media-general.
 .media-servers.net
 .media-toolbar.com/
-.merriam-webster.com/creative.
 .mediaforge.com/
 .mediag4.com/
 .mediagridwork.
@@ -843,6 +843,7 @@
 .megaupload.com/mc.php?
 .megavideo.com/xml/videoad.php?
 .mercuras.com/
+.merriam-webster.com/creative.
 .meta4-group.
 .metriweb.be/
 .meubonus.com/
@@ -1430,7 +1431,6 @@
 /_odd_images/banners/
 /_special/banners/
 /a.aspx?Zone
-/ads160x600
 /abm.asp?
 /abmw.asp?
 /abmw.aspx
@@ -1703,6 +1703,7 @@
 /ads/sponsor
 /ads/www/
 /Ads09a/
+/ads160x600
 /ads2.html
 /ads2.js
 /ads2.php?
@@ -3063,10 +3064,10 @@ http://ad.au.doubleclick.net/ad
 http://ad.be.doubleclick.net/ad/
 http://ad.blog.
 http://ad.bnmla.com/
-http://ad.doubleclick.net/clk
 http://ad.ca.doubleclick.net/ad
 http://ad.de.doubleclick.net/ad/
 http://ad.doubleclick.net/ad/
+http://ad.doubleclick.net/clk
 http://ad.doubleclick.net/N4675/
 http://ad.doubleclick.net/pfadx/
 http://ad.emsn.de/
@@ -3464,8 +3465,8 @@ http://layer-ads.
 http://legendarylars.com/promo/
 http://letitbit.net/tmpl/premium_
 http://lifepromo.biz/promo/
-http://links-and-traffic.com/
 http://linkexchangers.net/
+http://links-and-traffic.com/
 http://links.freeones.com/link
 http://linksave.in/fopen
 http://lisa.belointeractive.
