--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: BmCF457qVvCnWNqpwyaMOg
+# Checksum: x6IgjmH+Um5rJk3MLuUiVw
 # Updated: 29 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -399,7 +399,6 @@
 .casalemedia.
 .cashlayer.
 .cashthat.
-http://dads.new.digg.com/
 .cashworld.biz/
 .cb.cl/NewCBCL/Banner.
 .cb.cl/NewCBCL/images/cb_
