--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -207,6 +207,7 @@
 .displaymarketplace.com/
 .dl-rms.com/
 .dmtracker.
+.dgmsearchlab.com/
 .dnsalias.com/intranet-crm-tracking/
 .do_tracking
 .doubleclick.net/dot.gif?
