--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: x6IgjmH+Um5rJk3MLuUiVw
-# Updated: 29 Aug 2010
+# Checksum: xCl9g+TWGS4YfOC0qF94QA
+# Updated: 30 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2563,6 +2563,7 @@
 /vghd.gif
 /vghd.swf
 /vghd2.gif
+/viewAd.
 /VideoAdRenderer.
 /view.php?ad_id
 /view/banner/
