--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xCl9g+TWGS4YfOC0qF94QA
+# Checksum: MrUXUope5zho1UNMrkax+Q
 # Updated: 30 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1730,6 +1730,7 @@
 /adsense?
 /adsense_
 /adsensecamp.com/
+/adsensepremium
 /adsensev
 /adserv_launch
 /adserve.cgi
