--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: MrUXUope5zho1UNMrkax+Q
+# Checksum: YvQgUZHRGvyEeAl2ObvT3A
 # Updated: 30 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2212,6 +2212,7 @@
 /iplgadshow
 /j/ads.js
 /JavaScript/Ads/
+/javascript/ads.
 /js.ng/c
 /js.ng/p
 /js.ng/s
