--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -51,6 +51,7 @@
 .arkayne.com/
 .associatedcontent.com/action_cookie.
 .astrology.com/visits/
+.asterpix.com/tagcloudview/
 .au/t.ashx?
 .auctiva.com/Default.aspx?query
 .aweber.com/form/displays.htm?
