--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: YvQgUZHRGvyEeAl2ObvT3A
+# Checksum: WMSFOy3EcoamPMaNK2zF0Q
 # Updated: 30 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2536,6 +2536,7 @@
 /tikilink?
 /tizers.php?
 /tmo/ads/
+/TmnAdsense.
 /toigoogleads.
 /top_ad.
 /top_ad/
