--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -96,6 +96,7 @@
 .checkeffect.at/
 .checkstat.nl/
 .china.com/statistic.js
+.choicestream.com/
 .clearspring.com/at/
 .clearspring.com/button1.swf
 .clearspring.com/t/
@@ -684,6 +685,7 @@
 .youtube-nocookie.com/gen_204?
 .youtube.com/s?
 .youtube.com/tracker
+.zappos.com/onload.
 .zroitracker.com/
 /0pixel.php?
 /1.1/1.gif?
