--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WMSFOy3EcoamPMaNK2zF0Q
-# Updated: 30 Aug 2010
+# Checksum: L+SZ1WgbgwUBGcShi1hRBQ
+# Updated: 31 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1127,6 +1127,7 @@
 .swf?iurl=http
 .swf?link1=http
 .swiftco.net/banner/
+.sxc.hu/img/banner
 .symbiosting.com/LogicBuy/
 .tacoda.net/
 .targetpoint.com/
@@ -2211,8 +2212,8 @@
 /insertAds.
 /iplgadshow
 /j/ads.js
-/JavaScript/Ads/
 /javascript/ads.
+/JavaScript/Ads/
 /js.ng/c
 /js.ng/p
 /js.ng/s
@@ -2535,8 +2536,8 @@
 /thumbs/ads/
 /tikilink?
 /tizers.php?
-/tmo/ads/
 /TmnAdsense.
+/tmo/ads/
 /toigoogleads.
 /top_ad.
 /top_ad/
@@ -2566,11 +2567,11 @@
 /vghd.gif
 /vghd.swf
 /vghd2.gif
-/viewAd.
 /VideoAdRenderer.
 /view.php?ad_id
 /view/banner/
 /view_banner.asp?
+/viewAd.
 /viewer/rad?
 /virtuagirl
 /virtual_girl_
