--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: L+SZ1WgbgwUBGcShi1hRBQ
+# Checksum: cBXEaFqq1CogjQyQ2mk3BA
 # Updated: 31 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -548,6 +548,7 @@
 .edge.ru4.
 .egghelp.org/images/misc/
 .ehow.com/images/brands/
+.ehow.com/marketing/
 .ejb.com/300_
 .elekted.com/
 .eliado.com/banner/
