http://static.linkbucks.com/tmpl/mint/ads/hollywire/header.gif

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: cBXEaFqq1CogjQyQ2mk3BA
-# Updated: 31 Aug 2010
+# Checksum: ZCgsq+pNO7iE/OQpvCBDrg
+# Updated: 1 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2265,6 +2265,7 @@
 /mediaplayer/leaderboard?zone=
 /MetaAdServer/
 /middle_adv_
+/mint/ads/
 /miva_ads
 /mnads1.php?
 /mod/adman/
