--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -1,6 +1,7 @@
 # Indian (Iron-Chrome)
 .addynamo.com/
 .admagnet.net/
+.adohana.com/
 .ads.sampurn.com/
 .apniisp.com/glinks.
 .axill.in/
@@ -15,8 +16,8 @@
 .in/ads/
 .indiadaily.com/editorial/leaderboard.
 .indiadaily.com/leaderboard.
-.mpression.net/
 .mbajunction.com/mba/ads/
+.mpression.net/
 .net-filter.com/
 .net/Ads/
 .netklix.com/
@@ -50,11 +51,12 @@
 http://ads.webindia123.com/
 http://azadmob.in/
 http://besttop.mobi/
+http://bpoavenues.com/bpo/ads/
 http://c.waplog.net/
 http://c.wen.ru/
 http://contentxn.com/
 http://countreg.com/
-http://bpoavenues.com/bpo/ads/
+http://eduads.net/
 http://statistics.infowap.info/
 http://stats.ozwebsites.biz/
 http://thinakkural.com/web_advers/
