--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1,5 +1,4 @@
 # Fanboy's Stats list (Iron-Chrome)
-/pgtracking.
 -AdTracking.
 -livetracker.rferl.org
 -seo-tracker.
@@ -50,8 +49,8 @@
 .apexstats.
 .arkayne.com/
 .associatedcontent.com/action_cookie.
-.astrology.com/visits/
 .asterpix.com/tagcloudview/
+.astrology.com/visits/
 .au/t.ashx?
 .auctiva.com/Default.aspx?query
 .aweber.com/form/displays.htm?
@@ -92,6 +91,7 @@
 .celebros-analytics.
 .center.tv/counter/
 .chart.dk/
+.chartbeat.com/
 .chase.com/js/Reporting.js
 .checkeffect.at/
 .checkstat.nl/
@@ -201,6 +201,7 @@
 .demdex.net/
 .deqwas.net/
 .destinationurl.
+.dgmsearchlab.com/
 .did-it.com/
 .dimestore.com/viapi?
 .directcounter.de/dc/
@@ -209,7 +210,6 @@
 .displaymarketplace.com/
 .dl-rms.com/
 .dmtracker.
-.dgmsearchlab.com/
 .dnsalias.com/intranet-crm-tracking/
 .do_tracking
 .doubleclick.net/dot.gif?
@@ -500,8 +500,8 @@
 .richrelevance.
 .ritecounter.
 .roiservice.com/track/
-.rovicorp.com/
 .rottentomatoes.com/tracking/
+.rovicorp.com/
 .rsvpgenius.com/
 .ru/stat/?
 .ru/top100.
@@ -767,8 +767,8 @@
 /c_track.php?
 /callbacks/stats?
 /cdx.gif?
-/cedexisus.
 /cedexis/
+/cedexisus.
 /cetrk.com/pages/
 /cgi-bin/cnt/
 /cgi-bin/count.pl?
@@ -888,8 +888,8 @@
 /ewtrack_
 /exe/indexer.php?
 /external-tracking.
-/fcgi-bin/
 /fbanalytics/
+/fcgi-bin/
 /flash-stats.php?
 /FTTrack2.js
 /ga.php?utm
@@ -1041,11 +1041,11 @@
 /metrics/survey/
 /metrics?metric
 /metrimatics/
-/mktg_metrics/
 /middle?call=http
 /mint/?js
 /mint/?record
 /mistats/
+/mktg_metrics/
 /mm_track/
 /mmetrix.mobi/
 /mouseover-tracker.js
@@ -1102,6 +1102,7 @@
 /partner.gif?
 /partners.thefilter.com/
 /permalink-tracker.html?
+/pgtracking.
 /php-stats.js
 /php-stats.php?
 /phpmyvisites.js
@@ -1388,7 +1389,6 @@
 ?eventtype=request&pid=
 _adcenterconversion.
 _check.php?referer
-_trafficTracking.
 _empty.ad?
 _onedot?
 _promo_id=
@@ -1396,6 +1396,7 @@ _sdctag1_
 _sdctag2.
 _stats/Logger?
 _tracker.js?
+_trafficTracking.
 _trans_1px.
 _web_stat.js
 _WebTrends.js?
@@ -1448,8 +1449,8 @@ http://adreadytractions.com/
 http://adstat.
 http://affiliate.iamplify.
 http://affiliate.productreview.
-http://affiliates.mozy.com/
 http://affiliates.izea.com/
+http://affiliates.mozy.com/
 http://an.yandex.ru/
 http://analysis1.
 http://analytic.
@@ -1594,7 +1595,6 @@ http://radarstats.com/
 http://referer.org/
 http://rek.www.
 http://rover.ebay.com/roveropen/
-https://reporting.singlefeed.com/
 http://rranking
 http://rss.feedsportal.com/c/
 http://s.clickability.
@@ -1614,18 +1614,17 @@ http://st.virginmedia.com/
 http://stat.4u.
 http://stat.dealtime.com/
 http://stat.onestat.com/
-http://stats.buzzea.com/
 http://static.pro.tracking202.com/
 http://static.tracking202.com
 http://statistics.tattermedia.
 http://statistics.wibiya.com/
-https://ssl-stats.wordpress.com/
 http://statistik-
 http://stats.bbc.
 http://stats.behance.net/
 http://stats.big-boards.
 http://stats.blogoscoop.net/
 http://stats.break.com/
+http://stats.buzzea.com/
 http://stats.complex.com/
 http://stats.e-go.gr/
 http://stats.greenoptions.com/
@@ -1645,9 +1644,9 @@ http://top.
 http://top100-
 http://tr-metrics.loomia.com/
 http://track.cbs.com/
+http://track.gawker.com/
 http://track.mybloglog.com/
 http://track.netshelter.net/
-http://track.gawker.com/
 http://track1.
 http://track2.
 http://track3.
@@ -1655,8 +1654,8 @@ http://track4.
 http://tracker.icerocket.com/
 http://tracker.marinsm.com/
 http://tracker.timesgroup.com/
-http://tracker.wordstream.com/
 http://tracker.vreveal.com/
+http://tracker.wordstream.com/
 http://tracker01.
 http://tracker2.apollo-mail.net/
 http://trackfeed.com/
@@ -1714,6 +1713,8 @@ http://z.about.com/px/?
 http://zirve100.com/Counter
 https://analytics.
 https://counter.
+https://reporting.singlefeed.com/
+https://ssl-stats.wordpress.com/
 https://vms.boldchat.com/aid/
 https://webstats.
 hypercount.com
