--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ZCgsq+pNO7iE/OQpvCBDrg
-# Updated: 1 Sep 2010
+# Checksum: RQRQSVRIirMgJZPHOZybnQ
+# Updated: 2 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2607,6 +2607,7 @@
 /yaboe_banner_
 /yahoo-ads/
 /yahooFeedProxy.
+/ukc-ad.
 /youradhere.
 /yourfuckbook/
 /ysc_csc_news
