--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: RQRQSVRIirMgJZPHOZybnQ
+# Checksum: IRX+J+nrwlfFcDQfenczug
 # Updated: 2 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -475,6 +475,7 @@
 .com/promoLoadDisplay?
 .com/reklama/
 .com/shareme.php?
+.com/u/ads/
 .com/video-ad-
 .comclick.
 .commissionmonster.
