site: http://www.worldstarhiphop.com/videos/

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: RQRQSVRIirMgJZPHOZybnQ
-# Updated: 2 Sep 2010
+# Checksum: 8G3Rh34FqEU9Q4Lm+AA+aA
+# Updated: 1 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -24,6 +24,7 @@
 -160x400-
 -160x600-
 -160x600.
+.com/u/ads/
 -160X600b
 -180x250.
 -180x60.
