--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: oxR/woBsGWN0B/Y61Crw3g
+# Checksum: uQnRSI7P40BxlbDycXYPSA
 # Updated: 1 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -24,7 +24,6 @@
 -160x400-
 -160x600-
 -160x600.
-.com/u/ads/
 -160X600b
 -180x250.
 -180x60.
