--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uQnRSI7P40BxlbDycXYPSA
+# Checksum: 7ovm8lE6zUF4zgbstyKVlA
 # Updated: 1 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2562,6 +2562,7 @@
 /ucstat.
 /udmserve.net/
 /ugoAds.
+/ukc-ad.
 /upads.info/
 /uploads/ads/
 /valueclick
@@ -2608,7 +2609,6 @@
 /yaboe_banner_
 /yahoo-ads/
 /yahooFeedProxy.
-/ukc-ad.
 /youradhere.
 /yourfuckbook/
 /ysc_csc_news
