--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 7ovm8lE6zUF4zgbstyKVlA
-# Updated: 1 Sep 2010
+# Checksum: jVBml6ekGwcL5xgABYOeQQ
+# Updated: 2 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2143,6 +2143,7 @@
 /html.ng/
 /html/ad/
 /html/ads_
+/i_ads.php
 /ifb/google_afc.
 /iframe.ad/
 /iframe/ad/
