--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -344,6 +344,7 @@
 .komtrack.com/
 .kosmix.com/images/mpv.txt?
 .kosmix.com/images/pv.txt?
+.krxd.net/
 .lastminute.com/cm/tr/
 .latimes.com/pixel/
 .legolas-media.com/
