--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jVBml6ekGwcL5xgABYOeQQ
+# Checksum: uWH5kAFIccGOQ0pe9FE64g
 # Updated: 2 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1500,6 +1500,7 @@
 /ad_bot.
 /ad_bottom
 /ad_caption.
+/ad_check.
 /ad_common
 /ad_count.php?
 /ad_engine?
@@ -1796,6 +1797,7 @@
 /adtrack
 /adttext.
 /adunit.
+/adUtils.
 /adunitt
 /adv.asp?
 /adv.aspx?
@@ -2961,6 +2963,7 @@ _Advertise180.
 _advertisement_
 _assets/ads/
 _banner/
+_blank_ads.
 _blogads.
 _box_ad_
 _cedexis.
