--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uWH5kAFIccGOQ0pe9FE64g
+# Checksum: TuPz60XuzbcfP38HKmbAzg
 # Updated: 2 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2600,6 +2600,7 @@
 /widget_ads?
 /WidgetAd.aspx?
 /wired/ads/
+/wp_ad.js
 /wp-content/ads/
 /wp-popup-scheduler/
 /wp-srv/ad/
