--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uWH5kAFIccGOQ0pe9FE64g
+# Checksum: TTSSE1uy1Iw8MOM4cuN7dw
 # Updated: 2 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1219,6 +1219,7 @@
 .velmedia.net/
 .videosz.com/custom/yuvutu/
 .vietad.vn/
+.viewdocsonline.com/images/banners/
 .vipquesting.com/
 .viraladnetwork.
 .virtuagirlhd.com/
@@ -1797,8 +1798,8 @@
 /adtrack
 /adttext.
 /adunit.
-/adUtils.
 /adunitt
+/adUtils.
 /adv.asp?
 /adv.aspx?
 /adv/adv_
