--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xdGXpFSeYvnYs4JabHsaXQ
+# Checksum: 81aoKilOXU+25F8btRe55w
 # Updated: 2 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1116,6 +1116,7 @@
 .streamateaccess.com/
 .streamen.com/exports/
 .streamray.com/
+.student-jobs.co.uk/banner.
 .stupidnakedpeople.com/local_media/banners/
 .sublimemedia.
 .suitesmart.com/
