--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 81aoKilOXU+25F8btRe55w
-# Updated: 2 Sep 2010
+# Checksum: tFF+PM6a3pMxkBwwWKIiyg
+# Updated: 3 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -187,6 +187,7 @@
 .adrolays.de/
 .adroll.com/
 .adru.net/
+.com/ads?
 .ads.darla.
 .ads.kelbymediagroup.com/
 .ads.netlog.com/
