--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: tFF+PM6a3pMxkBwwWKIiyg
+# Checksum: dEZAYmQUqHzpjlKSbkgZjg
 # Updated: 3 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -187,7 +187,6 @@
 .adrolays.de/
 .adroll.com/
 .adru.net/
-.com/ads?
 .ads.darla.
 .ads.kelbymediagroup.com/
 .ads.netlog.com/
@@ -452,6 +451,7 @@
 .com/Ads-
 .com/ads.
 .com/ads/
+.com/ads?
 .com/ads_
 .com/adsense/
 .com/adshow
@@ -1789,6 +1789,7 @@
 /adtag.gif
 /adtag.htm?
 /adtago.
+/AdTags.
 /adtagtc.
 /AdTech.
 /ADTECH;
