--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: dEZAYmQUqHzpjlKSbkgZjg
+# Checksum: P4N9qYt1FYExZvZOkOTvDQ
 # Updated: 3 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2583,6 +2583,7 @@
 /view/banner/
 /view_banner.asp?
 /viewAd.
+/views/ads/
 /viewer/rad?
 /virtuagirl
 /virtual_girl_
