--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: P4N9qYt1FYExZvZOkOTvDQ
-# Updated: 3 Sep 2010
+# Checksum: nsjaMjnjaxkHk3kIrT99IA
+# Updated: 4 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2285,7 +2285,6 @@
 /mstextad?
 /mtvi_ads_
 /myfreepaysitebanner.asp
-/naiad.js
 /neoads.js?
 /network_ad.
 /NeudesicAd.
