--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: nsjaMjnjaxkHk3kIrT99IA
+# Checksum: U2+CvAjPN/eJYArMiEB4Sg
 # Updated: 4 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1110,7 +1110,7 @@
 .spottt.com/
 .spunkycash.
 .sterrencash.
-.stileproject.com/static_html/stilep.js
+.stileproject.com/js/sp3_ep.js
 .stolenpornpasswords.
 .streamate.
 .streamate.com/exports/
