--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: U2+CvAjPN/eJYArMiEB4Sg
+# Checksum: bu2lH9sifVlWIYLp9m3wEw
 # Updated: 4 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -384,6 +384,7 @@
 .cam-content.
 .cam-lolita.net/index.php?
 .cam4.com/banners/
+.camads.net/
 .cam4.com/images/awebanner
 .cam4flat.com/banner/
 .camcrush.com/exports/
