--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: bu2lH9sifVlWIYLp9m3wEw
-# Updated: 4 Sep 2010
+# Checksum: rgi+PUDJSX8hIip9Yg6OGQ
+# Updated: 5 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3577,6 +3577,7 @@ http://pubad.
 http://pubdirecte.com/
 http://public.porn.fr/v3/
 http://publicidad
+http://publishing.kalooga.com/
 http://pussycash.com/Content/Banners/
 http://pwp.netcabo.
 http://qdmil.com/images/
