--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rgi+PUDJSX8hIip9Yg6OGQ
+# Checksum: aR6Lkpy097cqaA7U1AQW0w
 # Updated: 5 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -730,6 +730,7 @@
 .interclick.
 .internebula.net/
 .interpolls.com/
+.intellichatadult.com/
 .intext.billboard.
 .investingchannel.
 .invitemedia.
