optimise trackers and move filters to appropiate lists

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: aR6Lkpy097cqaA7U1AQW0w
+# Checksum: ubh73G5xCjcM5KkpwrCojA
 # Updated: 5 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1121,6 +1121,7 @@
 .streamray.com/
 .student-jobs.co.uk/banner.
 .stupidnakedpeople.com/local_media/banners/
+.struq.com/
 .sublimemedia.
 .suitesmart.com/
 .sunnysmedia.com/links/
@@ -1129,6 +1130,7 @@
 .surveymonkey.com/jsPop.aspx?
 .surveywriter.net/in/survey/
 .sweetmedia.org/
+.swelen.com
 .swf?BannerId
 .swf?iurl=http
 .swf?link1=http
@@ -1141,6 +1143,7 @@
 .tattomedia.
 .tbn.ru/
 .teasernet.ru/
+.teracent.net/
 .techbargains.com/inc_deals_feed.
 .technoratimedia.com/
 .techsupportforum.com/images/banners/
