optimise trackers and move filters to appropiate lists v3

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ubh73G5xCjcM5KkpwrCojA
+# Checksum: uFhIoMNZM/afn/knrB5DcA
 # Updated: 5 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3158,6 +3158,7 @@ http://adnext.fr/
 http://adplus.
 http://adprotraffic.com/
 http://ads-
+http://ad.xtendmedia.com/
 http://ads.24media.gr/
 http://ads.4tube.com/
 http://ads.adap.tv/
