--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -115,6 +115,7 @@
 .clicktracks.
 .clickzs.com/in.php?
 .clixcount.com/
+.clustrmaps.com/counter/
 .cn/stat.js
 .cnetcontentsolutions.
 .cnn.com/images/tracking/
