--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uFhIoMNZM/afn/knrB5DcA
+# Checksum: 4Yll5+Ovd9131QYIc4d4iw
 # Updated: 5 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2374,7 +2374,7 @@
 /plugins/wp_actionpop/
 /popAds.
 /portal_assets/
-/ppd_ads.php?
+/ppd_ads.
 /predictad.
 /premium_ad.
 /prestitial-ad
