--- a/easylistfanboy/iron/adblock-trk.ini
+++ b/easylistfanboy/iron/adblock-trk.ini
@@ -34,6 +34,7 @@
 .memlekethaber.com/banner/
 .milliyet.com.tr/d/f/1/
 .ntvmsnbc.com/adv/
+.odatv.com/staticimages/
 .ogile.com/banner
 .posta.com.tr/d/f/advertorial/
 .r10.net/reklam
