--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4Yll5+Ovd9131QYIc4d4iw
-# Updated: 5 Sep 2010
+# Checksum: EAVEtBlwz3MKw603S+8qGw
+# Updated: 6 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -559,6 +559,7 @@
 .elyrics.net/inc/ads/
 .emediate.eu/
 .emediate.se/
+.emptyspaceads.com/
 .end-finder.com/
 .eporner.com/ads-
 .ero-advertising.com
