--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: EAVEtBlwz3MKw603S+8qGw
+# Checksum: X6I5VXd0rdrdH0oV8dIkcA
 # Updated: 6 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1223,7 +1223,6 @@
 .valuead.
 .valueclick.
 .valueclickmedia.
-.vcmedia.
 .velmedia.net/
 .videosz.com/custom/yuvutu/
 .vietad.vn/
