--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: X6I5VXd0rdrdH0oV8dIkcA
+# Checksum: KJTIyLJQYAuVSEVp8vqcTA
 # Updated: 6 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3299,6 +3299,7 @@ http://annonser.
 http://anonymouse.org/ad
 http://anzeigen
 http://appbodega.com/Promos/
+http://api.opensourceadvertisementnetwork.info/
 http://armorgames.com/misc/banners/
 http://asiafriendfinder.com/go/
 http://athena-ads.
