--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: KJTIyLJQYAuVSEVp8vqcTA
+# Checksum: aQg5P9/p1JQF2szxdEcHVA
 # Updated: 6 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1134,6 +1134,7 @@
 .swelen.com
 .swf?BannerId
 .swf?iurl=http
+.swf?link=http
 .swf?link1=http
 .swiftco.net/banner/
 .sxc.hu/img/banner
@@ -3368,7 +3369,6 @@ http://cdn.eyewonder.com/
 http://cdn.liverail.com/adasset/
 http://cdn.nsimg.net/
 http://cdn.unicast.msn.com/
-http://cdns.webcams.com/e2
 http://celebritypink.com/bannedcelebs-
 http://click.absoluteagency.
 http://click.dtiserv2.com/
