--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: aQg5P9/p1JQF2szxdEcHVA
+# Checksum: 8DFh9Ey4btv/dQZyGhNHJQ
 # Updated: 6 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1540,6 +1540,7 @@
 /ad_request.
 /ad_right_
 /AD_Rotator
+/ad_script_
 /ad_server/
 /ad_servlet.
 /ad_show.js
