--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8DFh9Ey4btv/dQZyGhNHJQ
+# Checksum: jS96GtKSFJieehBUfe2TvQ
 # Updated: 6 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -344,6 +344,7 @@
 .binlayer.com/
 .binlayer.de/
 .bittads.com/
+.bit-tech.net/images/backgrounds/skin/
 .bizographics.
 .bkrtx.com/
 .blinkx.com/adhocnetwork/
