--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jS96GtKSFJieehBUfe2TvQ
+# Checksum: quKmokJQ4tk2vuXRjcRHGw
 # Updated: 6 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -343,8 +343,8 @@
 .bin-layer.de/
 .binlayer.com/
 .binlayer.de/
-.bittads.com/
 .bit-tech.net/images/backgrounds/skin/
+.bittads.com/
 .bizographics.
 .bkrtx.com/
 .blinkx.com/adhocnetwork/
@@ -385,9 +385,9 @@
 .cam-content.
 .cam-lolita.net/index.php?
 .cam4.com/banners/
-.camads.net/
 .cam4.com/images/awebanner
 .cam4flat.com/banner/
+.camads.net/
 .camcrush.com/exports/
 .camduty.com/
 .camelmedia.net/thumbs/
@@ -430,6 +430,7 @@
 .cmfads.com/widget/
 .cmpnet.com/ads/
 .cnn.com/cnn_adspaces/
+.coadvertise.com/
 .cocolog-nifty.com/banner/
 .codigobarras.
 .collective-media.
@@ -728,11 +729,11 @@
 .insitesystems.com/
 .inskinad.com/
 .inskinmedia.com/
+.intellichatadult.com/
 .intellitxt.
 .interclick.
 .internebula.net/
 .interpolls.com/
-.intellichatadult.com/
 .intext.billboard.
 .investingchannel.
 .invitemedia.
@@ -1121,9 +1122,9 @@
 .streamateaccess.com/
 .streamen.com/exports/
 .streamray.com/
+.struq.com/
 .student-jobs.co.uk/banner.
 .stupidnakedpeople.com/local_media/banners/
-.struq.com/
 .sublimemedia.
 .suitesmart.com/
 .sunnysmedia.com/links/
@@ -1135,8 +1136,8 @@
 .swelen.com
 .swf?BannerId
 .swf?iurl=http
-.swf?link=http
 .swf?link1=http
+.swf?link=http
 .swiftco.net/banner/
 .sxc.hu/img/banner
 .symbiosting.com/LogicBuy/
@@ -1146,13 +1147,13 @@
 .tattomedia.
 .tbn.ru/
 .teasernet.ru/
-.teracent.net/
 .techbargains.com/inc_deals_feed.
 .technoratimedia.com/
 .techsupportforum.com/images/banners/
 .teendestruction.com/
 .telemetryverification.net/
 .teltarif.de/ad
+.teracent.net/
 .testberichte.org/gads/
 .testseek.com/price_pricegrabber_
 .text-link-ads.
@@ -2590,8 +2591,8 @@
 /view/banner/
 /view_banner.asp?
 /viewAd.
-/views/ads/
 /viewer/rad?
+/views/ads/
 /virtuagirl
 /virtual_girl_
 /virtualgirl/
@@ -3120,6 +3121,7 @@ http://ad.terra.com
 http://ad.uk.doubleclick.net/ad
 http://ad.valuecalling.com/
 http://ad.wsod.com/
+http://ad.xtendmedia.com/
 http://ad.ytsa.net/
 http://ad.zanox.com/ppv/
 http://ad.zanox.com/tpv/
@@ -3161,7 +3163,6 @@ http://adnext.fr/
 http://adplus.
 http://adprotraffic.com/
 http://ads-
-http://ad.xtendmedia.com/
 http://ads.24media.gr/
 http://ads.4tube.com/
 http://ads.adap.tv/
@@ -3301,8 +3302,8 @@ http://annonse.
 http://annonser.
 http://anonymouse.org/ad
 http://anzeigen
-http://appbodega.com/Promos/
 http://api.opensourceadvertisementnetwork.info/
+http://appbodega.com/Promos/
 http://armorgames.com/misc/banners/
 http://asiafriendfinder.com/go/
 http://athena-ads.
