--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: quKmokJQ4tk2vuXRjcRHGw
-# Updated: 6 Sep 2010
+# Checksum: X5MeWdpYmxH9nRYB8VO+MQ
+# Updated: 7 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2481,6 +2481,7 @@
 /sidebar_ad.
 /sidebar_ads/
 /sidecol_ad.
+/sidelinead.
 /sifyhomelgrey_gads_
 /silver/ads/
 /site_ads.
