--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -271,6 +271,7 @@
 .godaddy.com/image.aspx?
 .google-analytics.com/ga.js?jsonp
 .google-analytics.com/siteopt.js?
+.google.com/gen_204?
 .google.com/gwt/x/ts?
 .googlelabs.com/log/
 .googleusercontent.com/tracker/
@@ -1616,8 +1617,8 @@ http://stats.manticoretechnology.com/
 http://stats.polldaddy.com/
 http://stats.shopify.com/
 http://stats.sitesuite.org/
-http://stats.townnews.com/
 http://stats.topofblogs.com/
+http://stats.townnews.com/
 http://stats.video.
 http://stats2.
 http://statsrv.451.com/
@@ -1630,11 +1631,11 @@ http://track.cbs.com/
 http://track.gawker.com/
 http://track.mybloglog.com/
 http://track.netshelter.net/
-http://tracker.anandtech.com/
 http://track1.
 http://track2.
 http://track3.
 http://track4.
+http://tracker.anandtech.com/
 http://tracker.icerocket.com/
 http://tracker.marinsm.com/
 http://tracker.timesgroup.com/
