--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -52,6 +52,7 @@
 .associatedcontent.com/action_cookie.
 .asterpix.com/tagcloudview/
 .astrology.com/visits/
+.asterpix.com/
 .au/t.ashx?
 .auctiva.com/Default.aspx?query
 .aweber.com/form/displays.htm?
@@ -533,6 +534,7 @@
 .sitetracker.com/
 .sitetracking.
 .skimlinks.com/
+.skimresources.com/
 .skyrock.net/img/pix.gif
 .smartadserver.com/a/track/
 .smartadserver.com/images/
