--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: X5MeWdpYmxH9nRYB8VO+MQ
-# Updated: 7 Sep 2010
+# Checksum: 7G/FCHrAg/oVoXpA9vxAuw
+# Updated: 9 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1867,6 +1867,7 @@
 /as_u/ads/
 /aseadnshow.js
 /assets/ad/
+/assets/ads/
 /astrack.
 /athena/tag/?
 /au2m8_preloader/
