--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 7G/FCHrAg/oVoXpA9vxAuw
+# Checksum: 6UMZxPD9CrOlc+jqSupkEQ
 # Updated: 9 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -456,6 +456,7 @@
 .com/ads/
 .com/ads?
 .com/ads_
+.com/adds/
 .com/adsense/
 .com/adshow
 .com/adstream_
