--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6UMZxPD9CrOlc+jqSupkEQ
+# Checksum: 8/zG6j0chwqLDoS6Bs2LmA
 # Updated: 9 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -473,6 +473,7 @@
 .com/gads/
 .com/hserver/
 .com/js.ng/
+.com/miads/
 .com/openx/
 .com/peels/
 .com/pop.js
