--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8/zG6j0chwqLDoS6Bs2LmA
+# Checksum: jpl23Shnh6WgkVrAVacGSA
 # Updated: 9 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -67,6 +67,7 @@
 -banner-ad
 -banner.swf?
 -fleshlight
+-gallery_ad/
 -leaderboard-ad-
 -tebya-na-dosuge.com/
 -third-ad.
