--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jpl23Shnh6WgkVrAVacGSA
+# Checksum: NqTYRPIkYwajXpG6v6aReA
 # Updated: 9 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1135,6 +1135,7 @@
 .supernovatube.com/spark.
 .surveymonkey.com/jsPop.aspx?
 .surveywriter.net/in/survey/
+.svlu.net/
 .sweetmedia.org/
 .swelen.com
 .swf?BannerId
