--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: NqTYRPIkYwajXpG6v6aReA
+# Checksum: QGrL1IA30ea28U8TY4RmQA
 # Updated: 9 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3007,6 +3007,7 @@ _leftx280_
 _minibanner
 _org_ad.
 _popovers_
+_platform_ads_
 _reporting_ads.
 _right_ad.
 _rmadv.
