--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: QGrL1IA30ea28U8TY4RmQA
+# Checksum: vgru/J4borAui4kuhOs1QA
 # Updated: 9 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1798,6 +1798,7 @@
 /adsx/www/
 /adsystem.
 /adsystem/
+/adSwap/
 /ads~adsize~
 /adtag.gif
 /adtag.htm?
