--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: vgru/J4borAui4kuhOs1QA
+# Checksum: jZEjQgd1Sq14q7yoffxj7Q
 # Updated: 9 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -300,6 +300,7 @@
 .assoc-amazon.
 .assoc-amazon.co.uk/
 .astrolabio.
+.assetize.com/
 .at.atwola.com/
 .atwola.com/addyn/
 .atwola.com/html/
