--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jZEjQgd1Sq14q7yoffxj7Q
+# Checksum: TuUrTAtKwI9g75A6oFfZzg
 # Updated: 9 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1009,6 +1009,7 @@
 .pornbb.org/adsnov.
 .pornbb.org/images/rotation/
 .pornbb.org/posts_ad.
+.pornturbo.com/tmarket.
 .pornoprinzen.com/banners_
 .pornprosnetwork.com/affiliates/
 .porntrack.com/
