--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TuUrTAtKwI9g75A6oFfZzg
-# Updated: 9 Sep 2010
+# Checksum: WyB4E6OhQvtrZ8dX3DxapA
+# Updated: 10 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1569,6 +1569,7 @@
 /AdBlock.ashx?
 /adblock_
 /adbrite-
+/adbrite2.
 /adbrite/
 /adbrite_
 /adCampaigns/
